--- a/style/filme-principal.css
+++ b/style/filme-principal.css
@@ -1,6 +1,6 @@
 .filme-principal {
-    font-size: 16px;
-    background:linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('/img/adt.jpg');
+    font-size: 20px;
+    background:linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('/img/foto1.jpg');
 
     height: 500px;
     background-size: cover;
@@ -9,6 +9,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    color: white;
 }
 
 .filme-principal .descricao {
@@ -18,6 +19,6 @@
 
 .filme-principal .titulo {
     margin-top: 15%;
-    font-size: 40px;
+    font-size: 60px;
     font-family: 'Trebuchet MS',Arial, Helvetica, sans-serif;
 }
